--- a/mathlete/res/values/strings.xml
+++ b/mathlete/res/values/strings.xml
@@ -3,6 +3,8 @@
 
     <string name="app_name">mathlete</string>
     <string name="action_settings">Settings</string>
+    <string name="action_help">Help</string>
+    <string name="action_about">About</string>
     <string name="hello_world">Hello world!</string>
 
 </resources>
