--- a/mathlete/res/values/strings.xml
+++ b/mathlete/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="action_settings">Settings</string>
     <string name="action_help">Help</string>
     <string name="action_about">About</string>
+    <string name="action_log">User Log</string>
     <string name="hello_world">Hello world!</string>
     <string name="dialog_about_body">Blah blah blah to fill in later</string>
     <string name="dialog_about_title">About Mathlete</string>
